Working on journal style with pandoc

--- a/aalto.bib
+++ b/aalto.bib
@@ -149,6 +149,23 @@
   number = {3}
 }
 
+@article{bar-talIntractableConflictConflict2000,
+  title = {From {{Intractable Conflict Through Conflict Resolution To Reconciliation}}: {{Psychological Analysis}}},
+  shorttitle = {From {{Intractable Conflict Through Conflict Resolution To Reconciliation}}},
+  author = {Bar-Tal, Daniel},
+  year = {2000},
+  month = jun,
+  volume = {21},
+  pages = {351--365},
+  issn = {0162-895X, 1467-9221},
+  doi = {10.1111/0162-895X.00192},
+  abstract = {Intractable intergroup conflicts require the formation of a conflictive ethos that enables a society to adapt to the conflict situation, survive the stressful period, and struggle successfully with the adversary. The formal termination of such a conflict begins with the elimination of the perceived incompatibility between the opposing parties through negotiation by their representatives\textemdash{}that is, a conflict resolution process. But this is only part of the long-term reconciliation process, which requires the formation of peaceful relations based on mutual trust and acceptance, cooperation, and consideration of mutual needs. The psychological aspect of reconciliation requires a change in the conflictive ethos, especially with respect to societal beliefs about group goals, about the adversary group, about the ingroup, about intergroup relations, and about the nature of peace. In essence, psychological reconciliation requires the formation of an ethos of peace, but this is extremely difficult in cases of intractable conflict. Political psychologists can and should work to improve the state of knowledge about reconciliation, which until now has received much less attention than conflict resolution.},
+  file = {/home/avnerus/Zotero/storage/3QWHA3NM/Bar‐Tal - 2000 - From Intractable Conflict Through Conflict Resolut.pdf},
+  journal = {Political Psychology},
+  language = {en},
+  number = {2}
+}
+
 @book{baradMeetingUniverseHalfway2007,
   title = {Meeting the Universe Halfway: {{Quantum}} Physics and the Entanglement of Matter and Meaning},
   author = {Barad, Karen},
@@ -1379,6 +1396,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   isbn = {1-134-36047-9}
 }
 
+@article{kronebergContributionIntergroupContact2011,
+  title = {The Contribution of Intergroup Contact in the Rescuing of Jews from {{Nazi Europe}} `: {{An}} Archival Re\textemdash{}Analysis of {{Oliner}} and {{Oliner}} (1988)},
+  author = {Kroneberg, C. and Hewstone, M.},
+  year = {2011},
+  journal = {Universities of Mannheim and Oxford}
+}
+
 @book{labanMasteryMovement1971,
   title = {The {{Mastery}} of {{Movement}}},
   author = {Laban, Rudolf and Ullmann, Lisa},
@@ -1926,6 +1950,16 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   year = {2005},
   pages = {262--277},
   journal = {On the nature of prejudice: Fifty years after Allport}
+}
+
+@incollection{pettigrewDoesIntergroupContact2013,
+  title = {Does Intergroup Contact Reduce Prejudice? {{Recent}} Meta-Analytic Findings},
+  booktitle = {Reducing Prejudice and Discrimination},
+  author = {Pettigrew, Thomas F. and Tropp, Linda R.},
+  year = {2013},
+  pages = {103--124},
+  publisher = {{Psychology Press}},
+  file = {/home/avnerus/Zotero/storage/HZEUSER5/Stuart Oskamp - Reducing prejudice and discrimination-Lawrence Erlbaum Associates (2000).epub}
 }
 
 @article{pettigrewIntergroupPrejudiceIts2011,
@@ -2489,6 +2523,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   publisher = {{Springer}}
 }
 
+@article{tredouxPreservingSpatialTemporal2005,
+  title = {Preserving {{Spatial}} and {{Temporal Dimensions}} in {{Observational Data}} of {{Segregation}}},
+  author = {Tredoux, Colin and Dixon, John and Underwood, Stephen and Nunez, David and Finchilescu, Gillian},
+  year = {2005},
+  month = sep,
+  volume = {35},
+  pages = {412--432},
+  issn = {0081-2463},
+  doi = {10.1177/008124630503500302},
+  file = {/home/avnerus/Zotero/storage/6Z7PI4LT/Tredoux et al. - 2005 - Preserving Spatial and Temporal Dimensions in Obse.pdf},
+  journal = {South African Journal of Psychology},
+  language = {en},
+  number = {3}
+}
+
 @inproceedings{tsuiExploringUseCases2011,
   title = {Exploring Use Cases for Telepresence Robots},
   booktitle = {2011 6th {{ACM}}/{{IEEE International Conference}} on {{Human}}-{{Robot Interaction}} ({{HRI}})},
@@ -2497,6 +2546,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   pages = {11--18},
   publisher = {{IEEE}},
   isbn = {1-4673-4395-1}
+}
+
+@article{turnerImaginingIntergroupContact2007,
+  title = {Imagining {{Intergroup Contact Can Improve Intergroup Attitudes}}},
+  author = {Turner, Rhiannon N. and Crisp, Richard J. and Lambert, Emily},
+  year = {2007},
+  month = oct,
+  volume = {10},
+  pages = {427--441},
+  issn = {1368-4302, 1461-7188},
+  doi = {10.1177/1368430207081533},
+  file = {/home/avnerus/Zotero/storage/8WZ8ZPW3/Turner et al. - 2007 - Imagining Intergroup Contact Can Improve Intergrou.pdf},
+  journal = {Group Processes \& Intergroup Relations},
+  language = {en},
+  number = {4}
 }
 
 @misc{UnicodeEmoji2019,
