Before posting the new structure to Google Docs

--- a/aalto.bib
+++ b/aalto.bib
@@ -138,6 +138,23 @@
   language = {en}
 }
 
+@article{banksAvatarsAreSometimes2016,
+  title = {Avatars Are (Sometimes) People Too: {{Linguistic}} Indicators of Parasocial and Social Ties in Player\textendash{}Avatar Relationships},
+  shorttitle = {Avatars Are (Sometimes) People Too},
+  author = {Banks, Jaime and Bowman, Nicholas David},
+  year = {2016},
+  month = aug,
+  volume = {18},
+  pages = {1257--1276},
+  issn = {1461-4448, 1461-7315},
+  doi = {10.1177/1461444814554898},
+  abstract = {As principal links between players and many gameworlds, avatars are of central importance in understanding human behavior and communication in play. In particular, the connection between player and avatar is understood as influencing a range of cognitive, affective, and behavioral play phenomena. Divergent approaches examine this connection from both parasocial (one-way, non-dialectical) and social (two-way, dialectical) perspectives. This study examined how player\textendash{}avatar connections may be better understood by integrating an existing parasocial approach (character attachment [CA]) with a social approach (player\textendash{}avatar relationships [PARs]). A quantitative linguistic analysis of massively multiplayer online game (MMO) player interviews revealed statistically robust associations among language patterns, dimensions of CA, and PAR types. Validating and extending prior research, findings highlight the importance of selfdifferentiation and anthropomorphization in suspending disbelief so that the avatar may be taken as a fully social agent.},
+  file = {/home/avnerus/Zotero/storage/2DT3NT45/Banks and Bowman - 2016 - Avatars are (sometimes) people too Linguistic ind.pdf},
+  journal = {New Media \& Society},
+  language = {en},
+  number = {7}
+}
+
 @article{baoSoftRoboticsAcademic2018,
   title = {Soft Robotics: {{Academic}} Insights and Perspectives through Bibliometric Analysis},
   author = {Bao, Guanjun and Fang, Hui and Chen, Lingfeng and Wan, Yuehua and Xu, Fang and Yang, Qinghua and Zhang, Libin},
@@ -274,6 +291,21 @@
   author = {Braidotti, Rosi},
   year = {2017},
   publisher = {{Polity}}
+}
+
+@article{bremnerPersonalityPerceptionRobot2017,
+  title = {Personality {{Perception}} of {{Robot Avatar Teleoperators}} in {{Solo}} and {{Dyadic Tasks}}},
+  author = {Bremner, Paul Adam and Celiktutan, Oya and Gunes, Hatice},
+  year = {2017},
+  month = may,
+  volume = {4},
+  pages = {16},
+  issn = {2296-9144},
+  doi = {10.3389/frobt.2017.00016},
+  abstract = {Humanoid robot avatars are a potential new telecommunication tool, whereby a user is remotely represented by a robot that replicates their arm, head, and possible face movements. They have been shown to have a number of benefits over more traditional media such as phones or video calls. However, using a teleoperated humanoid as a communication medium inherently changes the appearance of the operator, and appearance-based stereotypes are used in interpersonal judgments (whether consciously or unconsciously). One such judgment that plays a key role in how people interact is personality. Hence, we have been motivated to investigate if and how using a robot avatar alters the perceived personality of teleoperators. To do so, we carried out two studies where participants performed 3 communication tasks, solo in study one and dyadic in study two, and were recorded on video both with and without robot mediation. Judges recruited using online crowdsourcing services then made personality judgments of the participants in the video clips. We observed that judges were able to make internally consistent trait judgments in both communication conditions. However, judge agreement was affected by robot mediation, although which traits were affected was highly task dependent. Our most important finding was that in dyadic tasks personality trait perception was shifted to incorporate cues relating to the robot's appearance when it was used to communicate. Our findings have important implications for telepresence robot design and personality expression in autonomous robots.},
+  file = {/home/avnerus/Zotero/storage/ZKKC8I2J/Bremner et al. - 2017 - Personality Perception of Robot Avatar Teleoperato.pdf},
+  journal = {Frontiers in Robotics and AI},
+  language = {en}
 }
 
 @article{brezinaNeuromuscularTransformDynamic2000,
@@ -506,6 +538,22 @@
   lccn = {B2430.D453 D4313 2007},
   note = {OCLC: ocm71810055},
   series = {European Perspectives}
+}
+
+@article{deligianisImpactIntergroupBias2017,
+  title = {The {{Impact}} of {{Intergroup Bias}} on {{Trust}} and {{Approach Behaviour Towards}} a {{Humanoid Robot}}},
+  author = {Deligianis, Christopher and Stanton, Christopher John and McGarty, Craig and Stevens, Catherine J.},
+  year = {2017},
+  month = dec,
+  volume = {6},
+  pages = {4},
+  issn = {2163-0364},
+  doi = {10.5898/JHRI.6.3.Deligianis},
+  abstract = {As robots become commonplace, and for successful human-robot interaction to occur, people will need to trust them. Two experiments were conducted using the ``minimal group paradigm'' to explore whether social identity theory influences trust formation and impressions of a robot. In Experiment 1, participants were allocated to either a ``robot'' or ``computer'' group, and then they played a cooperative visual tracking game with an Aldebaran Nao humanoid robot as a partner. We hypothesised participants in the ``robot group'' would demonstrate intergroup bias by sitting closer to the robot (proxemics) and trusting the robot's suggested answers more frequently than their ``computer group'' counterparts. Experiment 2 used an almost identical procedure with a different set of participants; however, all participants were assigned to the ``robot group'' and thee different levels of anthropomorphic robot movement were manipulated. Our results suggest that intergroup bias and humanlike movement can significantly affect human-robot approach behaviour. Significant effects were found for trusting the robot's suggested answers with respect to task difficulty, but not for group membership or robot movement.},
+  file = {/home/avnerus/Zotero/storage/FSE37DZZ/Deligianis et al. - 2017 - The Impact of Intergroup Bias on Trust and Approac.pdf},
+  journal = {Journal of Human-Robot Interaction},
+  language = {en},
+  number = {3}
 }
 
 @article{delvicarioEchoChambersEmotional2016,
@@ -1579,6 +1627,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   language = {en}
 }
 
+@article{kimTwoRoutesLeading2011,
+  title = {Two {{Routes Leading}} to {{Conformity Intention}} in {{Computer}}-{{Mediated Groups}}: {{Matching Versus Mismatching Virtual Representations}}},
+  shorttitle = {Two {{Routes Leading}} to {{Conformity Intention}} in {{Computer}}-{{Mediated Groups}}},
+  author = {Kim, Junghyun},
+  year = {2011},
+  month = jan,
+  volume = {16},
+  pages = {271--287},
+  issn = {10836101},
+  doi = {10.1111/j.1083-6101.2011.01539.x},
+  file = {/home/avnerus/Zotero/storage/4RCWA7BK/Kim - 2011 - Two Routes Leading to Conformity Intention in Comp.pdf},
+  journal = {Journal of Computer-Mediated Communication},
+  language = {en},
+  number = {2}
+}
+
 @article{kohringMaterialityTechnologyConstructing2014,
   title = {Materiality, {{Technology}}, and {{Constructing Social Knowledge}} through {{Bodily Representation}}: {{A View}} from {{Prehistoric Guernsey}}, {{Channel Islands}}},
   shorttitle = {Materiality, {{Technology}}, and {{Constructing Social Knowledge}} through {{Bodily Representation}}},
@@ -2116,6 +2180,23 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   pages = {1097--1108},
   journal = {The Journal of the Acoustical Society of America},
   number = {2}
+}
+
+@article{nagendranSymmetricTelepresenceUsing2015,
+  title = {Symmetric Telepresence Using Robotic Humanoid Surrogates: {{Robotic}} Symmetric Telepresence},
+  shorttitle = {Symmetric Telepresence Using Robotic Humanoid Surrogates},
+  author = {Nagendran, Arjun and Steed, Anthony and Kelly, Brian and Pan, Ye},
+  year = {2015},
+  month = may,
+  volume = {26},
+  pages = {271--280},
+  issn = {15464261},
+  doi = {10.1002/cav.1638},
+  abstract = {Telepresence involves the use of virtual reality technology to facilitate apparent physical participation in distant events, including potentially performing tasks, while creating a sense of being in that location. Traditionally, such systems are asymmetric in nature where only one side (participant) is ``teleported'' to the remote location. In this manuscript, the authors explore the possibility of symmetric three-dimensional telepresence where both sides (participants) are ``teleported'' simultaneously to each other's location; the overarching concept of symmetric telepresence in virtual environments is extended to telepresence robots in physical environments. Two identical physical humanoid robots located in UK and the USA serve as surrogates while performing a transcontinental shared collaborative task. The actions of these surrogate robots are driven by capturing the intent of the participants controlling them in either location. Participants could communicate verbally but could not see the other person or the remote location while performing the task. The effectiveness of gesturing along with other observations during this preliminary experiment is presented. Results reveal that the symmetric robotic telepresence allowed participants to use and understand gestures in cases where they would otherwise have to describe their actions verbally. Copyright \textcopyright{} 2015 John Wiley \& Sons, Ltd.},
+  file = {/home/avnerus/Zotero/storage/6RSEQCZS/Nagendran et al. - 2015 - Symmetric telepresence using robotic humanoid surr.pdf},
+  journal = {Computer Animation and Virtual Worlds},
+  language = {en},
+  number = {3-4}
 }
 
 @article{nakataExpressionEmotionIntention,
@@ -2812,6 +2893,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Journal of Social Issues},
   language = {en},
   number = {1}
+}
+
+@article{sproullReducingSocialContext1986,
+  title = {Reducing {{Social Context Cues}}: {{Electronic Mail}} in {{Organizational Communication}}},
+  shorttitle = {Reducing {{Social Context Cues}}},
+  author = {Sproull, Lee and Kiesler, Sara},
+  year = {1986},
+  month = nov,
+  volume = {32},
+  pages = {1492--1512},
+  issn = {0025-1909, 1526-5501},
+  doi = {10.1287/mnsc.32.11.1492},
+  file = {/home/avnerus/Zotero/storage/LRIKSG2M/Sproull and Kiesler - 1986 - Reducing Social Context Cues Electronic Mail in O.pdf},
+  journal = {Management Science},
+  language = {en},
+  number = {11}
 }
 
 @article{stanoInternetSpreadConspiracy2020,
