Working on final article

--- a/aalto.bib
+++ b/aalto.bib
@@ -432,6 +432,14 @@
   journal = {Consciousness in the physical world: Perspectives on Russellian monism}
 }
 
+@book{clarksonBattleBotsOfficialGuide2002,
+  title = {{{BattleBots}}: {{The Official Guide}}},
+  author = {Clarkson, Mark and {Foreword By-Dwyer}, Bill},
+  year = {2002},
+  publisher = {{McGraw-Hill, Inc.}},
+  isbn = {0-07-222425-8}
+}
+
 @misc{colaSmallWorldMachines,
   title = {Small {{World Machines}}},
   author = {Cola, Coca}
@@ -574,6 +582,17 @@
   publisher = {{Macmillan}}
 }
 
+@inproceedings{deweyExperienceEducation1986,
+  title = {Experience and Education},
+  booktitle = {The {{Educational Forum}}},
+  author = {Dewey, John},
+  year = {1986},
+  volume = {50},
+  pages = {241--252},
+  publisher = {{Taylor \& Francis}},
+  isbn = {0013-1725}
+}
+
 @article{dinanCollectiveUnconsciousHow2015,
   title = {Collective Unconscious: {{How}} Gut Microbes Shape Human Behavior},
   author = {Dinan, Timothy G. and Stilling, Roman M. and Stanton, Catherine and Cryan, John F.},
@@ -595,6 +614,7 @@
   pages = {208--226},
   issn = {1795-6889},
   abstract = {Exploring the phenomenology of remote practices made possible by recent technological advances, such as telesurgery, will reveal the role of proprioception in agency and ownership of action and furthermore delimit the possibility of re-embodiment through technological interfaces. An understanding of the lived body, viewed through the philosophical paradigms of theorists Husserl and Merleau-Ponty, will demonstrate the role of the corporeal schema and intercorporeality in an agent's interaction with the immediate environment and hence elucidate the limits of achieving a seamless remote interaction as good as the ``real thing.'' These considerations are fundamental for grounding the bioethical, legal, and epistemological issues that arise in remote interaction, particularly in the case of telesurgery.},
+  file = {/home/avnerus/Zotero/storage/KUW5JJ4N/Dolezal - 2009 - The Remote Body The Phenomenology of Telepresence.pdf},
   isbn = {1795-6889},
   journal = {Human Technology},
   keywords = {phenomenology,re-embodiment,remote environment,telepresence,telesurgery},
@@ -874,6 +894,15 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   number = {4}
 }
 
+@book{gallagherHowBodyShapes2006,
+  title = {How the Body Shapes the Mind},
+  author = {Gallagher, Shaun},
+  year = {2006},
+  publisher = {{Clarendon Press}},
+  file = {/home/avnerus/Zotero/storage/9TRL4FU3/Shaun Gallagher - How the Body Shapes the Mind -Oxford University Press (2005).epub},
+  isbn = {0-19-162257-5}
+}
+
 @article{gallagherPhilosophicalConceptionsSelf2000,
   title = {Philosophical Conceptions of the Self: Implications for Cognitive Science},
   shorttitle = {Philosophical Conceptions of the Self},
@@ -994,6 +1023,26 @@ Although derived from a relatively small number of studies, these results sugges
   keywords = {Communication,Functionalism (Linguistics),Philosophy,Rationalism,Social action,Sociology},
   language = {en},
   lccn = {HM24 .H3213 1984}
+}
+
+@article{hancockMetaAnalysisFactorsAffecting2011,
+  title = {A {{Meta}}-{{Analysis}} of {{Factors Affecting Trust}} in {{Human}}-{{Robot Interaction}}},
+  author = {Hancock, Peter A. and Billings, Deborah R. and Schaefer, Kristin E. and Chen, Jessie Y. C. and {de Visser}, Ewart J. and Parasuraman, Raja},
+  year = {2011},
+  month = oct,
+  volume = {53},
+  pages = {517--527},
+  issn = {0018-7208, 1547-8181},
+  doi = {10.1177/0018720811417254},
+  abstract = {Objective: We evaluate and quantify the effects of human, robot, and environmental factors on perceived trust in human-robot interaction (HRI).
+Background: To date, reviews of trust in HRI have been qualitative or descriptive. Our quantitative review provides a fundamental empirical foundation to advance both theory and practice.
+Method: Meta-analytic methods were applied to the available literature on trust and HRI. A total of 29 empirical studies were collected, of which 10 met the selection criteria for correlational analysis and 11 for experimental analysis. These studies provided 69 correlational and 47 experimental effect sizes.
+Results: The overall correlational effect size for trust was r\textendash{} = +0.26,with an experimental effect size of d\textendash{} = +0.71. The effects of human, robot, and environmental characteristics were examined with an especial evaluation of the robot dimensions of performance and attribute-based factors. The robot performance and attributes were the largest contributors to the development of trust in HRI. Environmental factors played only a moderate role.
+Conclusion: Factors related to the robot itself, specifically, its performance, had the greatest current association with trust, and environmental factors were moderately associated. There was little evidence for effects of human-related factors.},
+  file = {/home/avnerus/Zotero/storage/2L6HK7GS/Hancock et al. - 2011 - A Meta-Analysis of Factors Affecting Trust in Huma.pdf},
+  journal = {Human Factors: The Journal of the Human Factors and Ergonomics Society},
+  language = {en},
+  number = {5}
 }
 
 @book{hannafordFeelingBelievingHistory2000,
@@ -1191,6 +1240,18 @@ Although derived from a relatively small number of studies, these results sugges
   number = {2}
 }
 
+@article{hillewaertTacticsTactilitySensory2016,
+  title = {Tactics and Tactility: A Sensory Semiotics of Handshakes in Coastal {{Kenya}}},
+  author = {Hillewaert, Sarah},
+  year = {2016},
+  volume = {118},
+  pages = {49--66},
+  publisher = {{Wiley Online Library}},
+  isbn = {0002-7294},
+  journal = {American Anthropologist},
+  number = {1}
+}
+
 @article{ho2008social,
   title = {Social-Psychological Influences on Opinion Expression in Face-to-Face and Computer-Mediated Communication},
   author = {Ho, Shirley S and McLeod, Douglas M},
@@ -1295,6 +1356,22 @@ Although derived from a relatively small number of studies, these results sugges
   note = {OCLC: ocn681912813},
   number = {48},
   series = {Blackwell Companions to Philosophy}
+}
+
+@inproceedings{hughesHumanSurrogatesRemote2014,
+  title = {Human {{Surrogates}}: {{Remote Presence}} for {{Collaboration}} and {{Education}} in {{Smart Cities}}},
+  shorttitle = {Human {{Surrogates}}},
+  booktitle = {Proceedings of the 1st {{International Workshop}} on {{Emerging Multimedia Applications}} and {{Services}} for {{Smart Cities}} - {{EMASC}} '14},
+  author = {Hughes, Charles E.},
+  year = {2014},
+  pages = {1--2},
+  publisher = {{ACM Press}},
+  address = {{Orlando, Florida, USA}},
+  doi = {10.1145/2661704.2661712},
+  abstract = {A human surrogate is any object, virtual, physical or even a blend of virtual and physical, that acts as a stand-in for a human. Surrogates can be directly controlled or just given a specific task to carry out on behalf of a human. In the context of a virtual environment, a surrogate is more often referred to as an avatar, reflecting that it is intended to represent the person in some context, rather than just carrying out a specific task on his or her behalf. In essence, an avatar is a manifestation of the human who is ``inhabiting'' it. A person's avatar can look like the inhabiter or look like some other person, or even be a personification of some non-human character Generally, the inhabiter controls all critical actions, verbal and non-verbal, of his or her avatar, although the specific manifestation of the avatar may place constraints on how it carries out some of these desired behaviors.},
+  file = {/home/avnerus/Zotero/storage/XI99X8RZ/Hughes - 2014 - Human Surrogates Remote Presence for Collaboratio.pdf},
+  isbn = {978-1-4503-3126-5},
+  language = {en}
 }
 
 @book{husserlGeneralIntroductionPure1982,
@@ -1463,6 +1540,22 @@ Although derived from a relatively small number of studies, these results sugges
   address = {{Ann Arbor}},
   isbn = {978-0-472-06810-4},
   language = {eng}
+}
+
+@inproceedings{katayamaSharingPositionalRelationship2018,
+  title = {Sharing the {{Positional Relationship}} with the {{Bidirectional Telepresence Robots}}},
+  booktitle = {2018 {{IEEE}} 22nd {{International Conference}} on {{Computer Supported Cooperative Work}} in {{Design}} (({{CSCWD}}))},
+  author = {Katayama, Naoki and Inoue, Tomoo and Shigeno, Hiroshi},
+  year = {2018},
+  month = may,
+  pages = {325--329},
+  publisher = {{IEEE}},
+  address = {{Nanjing}},
+  doi = {10.1109/CSCWD.2018.8465391},
+  abstract = {Collaborators are required to share a broad range of information in collaborative work. In physical spatial collaboration such as team dancing, theatrical performance, and team sport, one's behavior should be in accord with the partner's; the relative position in distance and in direction is critically important all the time even when moving. To realize remote physical spatial collaboration, achieving the shared recognition of positional relationship is one of the key issues. In this paper, we propose a setup between two remote sites where each collaborator immerses in the other remote site by a telepresence robot situated in the other site. The telepresence robot is a wheeled platform with a camera attached at man's eye height. It moves in response to the remote user's position and orientation and enables the user to get the first-person view video through a head-mounted display. By using two telepresence robots from both sites, both collaborators can recognize the partner being in front of him/her and can grasp the distance and the orientation of the partner in remote site. In the proposed setup, users can grasp the positional relationship as accurate and quick as the existing fixed views including the bird's-eye view.},
+  file = {/home/avnerus/Zotero/storage/27QQ3AQ8/Katayama et al. - 2018 - Sharing the Positional Relationship with the Bidir.pdf},
+  isbn = {978-1-5386-1482-2},
+  language = {en}
 }
 
 @incollection{katzMachinesBecomeUs2017,
@@ -1981,6 +2074,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {From Cognitive Technology: Essays on the Transformation of Thought and Society}
 }
 
+@misc{MeBot,
+  title = {{{MeBot}}},
+  file = {/home/avnerus/Zotero/storage/HGA8H55S/mebot.html},
+  journal = {Personal Robots Group},
+  language = {en-US}
+}
+
 @book{MediatingHumanBody2003,
   title = {Mediating the {{Human Body}}: {{Technology}}, {{Communication}}, and {{Fashion}}},
   shorttitle = {Mediating the {{Human Body}}},
@@ -2197,6 +2297,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Computer Animation and Virtual Worlds},
   language = {en},
   number = {3-4}
+}
+
+@article{nagendranUnifiedFrameworkIndividualized2014,
+  title = {A {{Unified Framework}} for {{Individualized Avatar}}-{{Based Interactions}}},
+  author = {Nagendran, Arjun and Pillat, Remo and Kavanaugh, Adam and Welch, Greg and Hughes, Charles},
+  year = {2014},
+  month = aug,
+  volume = {23},
+  pages = {109--132},
+  issn = {1054-7460, 1531-3263},
+  doi = {10.1162/PRES_a_00177},
+  abstract = {This paper presents a framework to interactively control avatars in remote environments. The system, called AMITIES, serves as the central component that connects people controlling avatars (inhabiters), various manifestations of these avatars (surrogates), and people interacting with these avatars (participants). A multiserver\textendash{}client architecture, based on a low-demand network protocol, connects the participant environment(s), the inhabiter station(s), and the avatars. A human-in-the-loop metaphor provides an interface for remote operation, with support for multiple inhabiters, multiple avatars, and multiple participants. Custom animation blending routines and a gesture-based interface provide inhabiters with an intuitive avatar control paradigm. This gesture control is enhanced by genres of program-controlled behaviors that can be triggered by events or inhabiter choices for individual or groups of avatars. This mixed (agency and gesture-based) control paradigm reduces the cognitive and physical loads on the inhabiter while supporting natural bidirectional conversation between participants and the virtual characters or avatar counterparts, including ones with physical manifestations, for example, robotic surrogates. The associated system affords the delivery of personalized experiences that adapt to the actions and interactions of individual users, while staying true to each virtual character's personality and backstory. In addition to its avatar control paradigm, AMITIES provides processes for character and scenario development, testing, and refinement. It also has integrated capabilities for session recording and event tagging, along with automated tools for reflection and after-action review. We demonstrate effectiveness by describing an instantiation of AMITIES, called TeachLivE, that is widely used by colleges of education to prepare new teachers and provide continuing professional development to existing teachers. Finally, we show the system's flexibility by describing a number of other diverse applications, and presenting plans to enhance capabilities and application areas.},
+  file = {/home/avnerus/Zotero/storage/I38MHZM4/Nagendran et al. - 2014 - A Unified Framework for Individualized Avatar-Base.pdf},
+  journal = {Presence: Teleoperators and Virtual Environments},
+  language = {en},
+  number = {2}
 }
 
 @article{nakataExpressionEmotionIntention,
@@ -2435,6 +2551,12 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   language = {en}
 }
 
+@misc{RadioheadLiveBerlin,
+  title = {(3) {{Radiohead}} - {{Live}} in {{Berlin}} ({{September}} 2016) \#{{StayHome}} \#{{WithMe}} - {{YouTube}}},
+  file = {/home/avnerus/Zotero/storage/5I6DQWTV/watch.html},
+  howpublished = {https://www.youtube.com/watch?v=NXy5xdwJaIY\&t=1064s}
+}
+
 @book{ranciereDisagreementPoliticsPhilosophy1999,
   title = {Disagreement: Politics and Philosophy},
   shorttitle = {Disagreement},
@@ -2627,6 +2749,18 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   keywords = {Pain,Torture,War},
   language = {en},
   lccn = {BJ1409 .S35 1985}
+}
+
+@article{schiffrinHandworkCeremonyCase1974,
+  title = {Handwork as Ceremony: {{The}} Case of the Handshake},
+  author = {Schiffrin, Deborah},
+  year = {1974},
+  volume = {12},
+  pages = {189--202},
+  publisher = {{Walter de Gruyter, Berlin/New York}},
+  isbn = {1613-3692},
+  journal = {Semiotica},
+  number = {3}
 }
 
 @article{schmittSoftRobotsManufacturing2018,
@@ -2828,6 +2962,16 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Theory, Culture \& Society},
   language = {en},
   number = {1}
+}
+
+@inproceedings{sirouspourMultioperatorMultirobotTeleoperation2005,
+  title = {Multi-Operator/Multi-Robot Teleoperation: An Adaptive Nonlinear Control Approach},
+  booktitle = {2005 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}}},
+  author = {Sirouspour, Shahin and Setoodeh, Peyman},
+  year = {2005},
+  pages = {1576--1581},
+  publisher = {{IEEE}},
+  isbn = {0-7803-8912-3}
 }
 
 @incollection{smithPhenomenology2018,
@@ -3037,6 +3181,24 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   keywords = {actuators,Arm,cooperative control,Electrohydraulics,electropneumatic control equipment,Fingers,flexible microactuator,kinematics,Kinematics,Leg,Legged locomotion,Manipulators,Microactuators,micromechanical devices,miniature robotic mechanisms,pitch,robots,Robots,Rubber,stretch,yaw}
 }
 
+@misc{SynonymsVisualityThesaurus,
+  title = {Synonyms of Visuality | {{Thesaurus}}.Com},
+  abstract = {Synonyms for visuality from Thesaurus.com, the world's leading online source for synonyms, antonyms, and more.},
+  file = {/home/avnerus/Zotero/storage/2ZVXXTLU/creating.html},
+  howpublished = {https://www.thesaurus.com/browse/visuality},
+  journal = {www.thesaurus.com},
+  language = {en}
+}
+
+@article{syrdalNegativeAttitudesRobots,
+  title = {The {{Negative Attitudes}} towards {{Robots Scale}} and {{Reactions}} to {{Robot Behaviour}} in a {{Live Human}}-{{Robot Interaction Study}}},
+  author = {Syrdal, Dag Sverre and Dautenhahn, Kerstin and Koay, Kheng Lee and Walters, Michael L},
+  pages = {7},
+  abstract = {This paper describes the use of the Negative Attitudes Towards Robots Scale (NARS) to explain participants' evaluations of robot behaviour styles in a Human-Robot Interaction (HRI) study. Twentyeight participants interacted with a robot in two experimental conditions in which the robot's behaviour was varied. Reliability analysis and a PCA was performed on the NARS items, creating three new subscales. Correlations between the subscales and other evaluations of the robot's behaviour found meaningful results, supporting the use of the NARS in English speaking samples.},
+  file = {/home/avnerus/Zotero/storage/MVAHTCEZ/Syrdal et al. - The Negative Attitudes towards Robots Scale and Re.pdf},
+  language = {en}
+}
+
 @article{syvaojaLiikuntaJaOppiminen2012,
   title = {Liikunta Ja Oppiminen},
   author = {Syv{\"a}oja, Heidi and Kantomaa, Marko and Laine, Kaarlo and Jaakkola, Timo and Pyh{\"a}lt{\"o}, Kirsi and Tammelin, Tuija},
@@ -3232,6 +3394,19 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   keywords = {Compassion,Empathy,Mindfulness,Stress,Student nurses}
 }
 
+@article{waltherComputermediatedCommunicationImpersonal1996,
+  title = {Computer-Mediated Communication: {{Impersonal}}, Interpersonal, and Hyperpersonal Interaction},
+  author = {Walther, Joseph B.},
+  year = {1996},
+  volume = {23},
+  pages = {3--43},
+  publisher = {{Sage Publications London}},
+  file = {/home/avnerus/Zotero/storage/S4D6UJ9X/walther1996.pdf},
+  isbn = {0093-6502},
+  journal = {Communication research},
+  number = {1}
+}
+
 @article{waltherComputermediatedCommunicationReduction2015,
   title = {Computer-Mediated Communication and the Reduction of Prejudice: {{A}} Controlled Longitudinal Field Experiment among {{Jews}} and {{Arabs}} in {{Israel}}},
   shorttitle = {Computer-Mediated Communication and the Reduction of Prejudice},
@@ -3294,6 +3469,14 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   language = {en}
 }
 
+@misc{WhatsAppWeba,
+  title = {{{WhatsApp Web}}},
+  abstract = {Quickly send and receive WhatsApp messages right from your computer.},
+  file = {/home/avnerus/Zotero/storage/XS8GCDEW/web.whatsapp.com.html},
+  howpublished = {https://web.whatsapp.com/},
+  language = {en}
+}
+
 @misc{WhatUncannyValley,
   title = {What {{Is}} the {{Uncanny Valley}}? - {{IEEE Spectrum}}},
   shorttitle = {What {{Is}} the {{Uncanny Valley}}?},
@@ -3328,6 +3511,15 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   type = {Under Review}
 }
 
+@misc{WorldMostAdvanced,
+  title = {The World's Most Advanced Social Robot},
+  abstract = {Furhat is a social robot with human-like expressions and advanced conversational artificial intelligence (AI) capabilities.},
+  file = {/home/avnerus/Zotero/storage/7W2LLNY9/furhatrobotics.com.html},
+  howpublished = {https://furhatrobotics.com/},
+  journal = {Furhat Robotics},
+  language = {en-US}
+}
+
 @inproceedings{xueComparisonExpressiveSpeech2018,
   title = {A {{Comparison}} of {{Expressive Speech Synthesis Approaches}} Based on {{Neural Network}}},
   booktitle = {Proceedings of the {{Joint Workshop}} of the 4th {{Workshop}} on {{Affective Social Multimedia Computing}} and First {{Multi}}-{{Modal Affective Computing}} of {{Large}}-{{Scale Multimedia Data}}},
@@ -3351,6 +3543,21 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   journal = {Ubiquity},
   language = {en},
   number = {October}
+}
+
+@inproceedings{yimDesignConsiderationsExpressive2011,
+  title = {Design Considerations of Expressive Bidirectional Telepresence Robots},
+  booktitle = {Proceedings of the 2011 Annual Conference Extended Abstracts on {{Human}} Factors in Computing Systems - {{CHI EA}} '11},
+  author = {Yim, Ji-Dong and Shaw, Chris D.},
+  year = {2011},
+  pages = {781},
+  publisher = {{ACM Press}},
+  address = {{Vancouver, BC, Canada}},
+  doi = {10.1145/1979742.1979633},
+  abstract = {Telepresence is an emerging market for everyday robotics, while limitations still exist for such robots to be widely used for ordinary people's social communication. In this paper, we present our iterative design approach toward an interactive bidirectional robot intermediaries along with application ideas and design considerations. This study also surveys recent efforts in HCI and HRI that augment multimodal interfaces for computer mediated communication. We conclude by discussing the key lessons we found useful from the system design. The findings for bidirectional telepresence robot interfaces are of: synchronicity, robot's role, intelligence, personalization, and personality construction method.},
+  file = {/home/avnerus/Zotero/storage/UEJ5JZ88/Yim and Shaw - 2011 - Design considerations of expressive bidirectional .pdf},
+  isbn = {978-1-4503-0268-5},
+  language = {en}
 }
 
 @article{zajoncFeelingThinkingPreferences1980,
