--- a/aalto.bib
+++ b/aalto.bib
@@ -913,6 +913,7 @@ Conclusions: These findings are the first to demonstrate long-term effects of ea
   pages = {14--21},
   issn = {1879-307X},
   abstract = {Several recently developed philosophical approaches to the self promise to enhance the exchange of ideas between the philosophy of the mind and the other cognitive sciences. This review examines two important concepts of self: the 'minimal self', a self devoid of temporal extension, and the 'narrative self', which involves personal identity and continuity across time. The notion of a minimal self is first clarified by drawing a distinction between the sense of self-agency and the sense of self-ownership for actions. This distinction is then explored within the neurological domain with specific reference to schizophrenia, in which the sense of self-agency may be disrupted. The convergence between the philosophical debate and empirical study is extended in a discussion of more primitive aspects of self and how these relate to neonatal experience and robotics. The second concept of self, the narrative self, is discussed in the light of Gazzaniga's left-hemisphere 'interpreter' and episodic memory. Extensions of the idea of a narrative self that are consistent with neurological models are then considered. The review illustrates how the philosophical approach can inform cognitive science and suggests that a two-way collaboration may lead to a more fully developed account of the self.},
+  file = {/home/avnerus/Zotero/storage/FLXUXDBZ/Gallagher - 2000 - Philosophical conceptions of the self implication.pdf},
   journal = {Trends in Cognitive Sciences},
   language = {eng},
   number = {1},
